# claude_work_reorder

./: CMakeLists.txt  README.md  TEST_RESULTS.txt  VERIFICATION_REPORT.md  benchmark.cpp  reorder.slang  reorder_optimized.slang  reorder_setassoc.slang  reorder_setassoc_v2.slang  reorder_setassoc_v3.slang  reorder_setassoc_v4.slang  test_notebook_nonGPU.py  validate_notebook.py  work_reorder.ipynb
